# acuity-index-substrate-cli

./: Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
