[package]
name = "hybrid-cli"
version = "0.1.3"
edition = "2021"
description = "A command line utility for querying Hybrid indexes."
homepage = "https://hybridscan.app/"
repository = "https://github.com/hybrid-explorer/hybrid-cli"
license = "Apache-2.0"

[[bin]]
name = "hybrid"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
byte-unit = "5.1.4"
subxt = "0.34.0"
futures-util = "0.3.30"
hex = "0.4.3"
anyhow = "1.0.80"
hybrid-api = "0.1.3"
